# starter-sdlcpp

./: CMakeLists.txt  README.md  i686-w64-mingw.cmake
src/: main.cpp
